# GuideOS

./: .clang-format  .gitignore  CMakeLists.txt  bochsrc.bxrc  grub.cfg  qemu.sh
cmake/: mac_toolchain.cmake
docs/: build_gcc_macos.md
kernel/: CMakeLists.txt  kernel.ld
kernel/include/: console.h  cpu.h  defs.h  error.h  kprintf.h  param.h  proc.h  spinlock.h  string.h  syscall.h  systick.h  types.h  vm.h  x86.h
kernel/include/arch/: x86.h
kernel/include/arch/x86/: instructions.h  interrupt.h  interrupt_vectors.h  msr.h  system.h  vmm.h
kernel/include/device/: uart.h
kernel/include/mem/: boot_alloc.h  kmalloc.h  memlayout.h  page_alloc.h  vm.h
kernel/include/util/: fifo.h  queue.h
kernel/script/: .gdbinit  gen_vector.py  qemu.sh
kernel/src/: cpu.c  kmain.c  kshell.c  spinlock.c  syscall.c
kernel/src/arch/x86/: console.c  interrupt.c  ioapic.c  lapic.c  system.c  x86_pic.c
kernel/src/arch/x86/asm/: bsp_init.s  multiboot.s  swtch.s  trap.s  vector.s  vectors.s
kernel/src/arch/x86/mem/: vm.c
kernel/src/arch/x86_64/: console.c  interrupt.c  system.c
kernel/src/arch/x86_64/asm/: bsp_init.s  multiboot.s
kernel/src/device/uart/: uart.c
kernel/src/mem/: boot_alloc.c  kmalloc.c  memlayout.c  page_alloc.c
kernel/src/proc/: proc.c  sched.c
kernel/src/time/: systick.c
kernel/src/util/: fifo.c  helpers.c  kprintf.c  queue.c  string.c
lib/libsys/: CMakeLists.txt
lib/libsys/include/: syscall_number.h  types.h  usys.h
lib/libsys/src/: syscall.c
stage1_bootloader/: CMakeLists.txt  stage1.ld
stage1_bootloader/src/asm/: init.s
stage2_bootloader/: CMakeLists.txt  stage2.ld
stage2_bootloader/src/: stage2_loader.c  test.c
stage2_bootloader/src/asm/: protected_mode.s  stage2.s
